2024-02-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-archive.el (tramp-register-archive-autoload-file-name-handler):
	Do not use read syntax #' for `tramp-archive-file-name-handler',
	it isn't autoloaded.

2024-02-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-security-key-pin-regexp): New defcustom.
	(tramp-action-otp-password, tramp-read-passwd): Trim password prompt.
	(tramp-action-show-and-confirm-message): Expand for PIN requests.

	* tramp-sh.el (tramp-actions-before-shell)
	(tramp-actions-copy-out-of-band):
	Use `tramp-security-key-pin-regexp'.

2024-02-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-file-name-handler):
	`file-remote-p' must not return an error.  (Bug#68976)

2024-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-message.el (tramp-backtrace, tramp-error)
	(tramp-error-with-buffer, tramp-user-error):
	Declare `tramp-suppress-trace' property.

2024-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-cache.el (with-tramp-saved-file-property)
	(with-tramp-saved-file-properties)
	(with-tramp-saved-connection-property)
	(with-tramp-saved-connection-properties): Do not change KEY
	destructively.

	* tramp-sh.el (tramp-do-copy-or-rename-file-out-of-band):
	Flush file properties in time.  (Bug#68805)

2024-02-04  Stefan Monnier  <monnier@iro.umontreal.ca>

	* tramp-sh.el (ls-lisp-use-insert-directory-program):
	Don't declare its existence...
	(tramp-sh-handle-insert-directory): ...test it instead.

	* tramp.el (ls-lisp-dirs-first, ls-lisp-emulation)
	(ls-lisp-ignore-case, ls-lisp-use-insert-directory-program)
	(ls-lisp-verbosity): Move declaration...
	(tramp-handle-insert-directory): ...to the point where we have a
	good reason to think these variables exist.

2024-01-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-maybe-open-connection): Exit remote shell
	when login fails.

2024-01-22  Michael Albinus  <michael.albinus@gmx.de>
